AM_CPPFLAGS = \
	-I$(top_srcdir)/include \
	-I$(top_srcdir)/common \
	@LIBCERROR_CPPFLAGS@ \
	@LIBUNA_DLL_IMPORT@

TESTS = \
	test_library.sh

check_SCRIPTS = \
	test_library.sh \
	test_runner.sh \
	test_unaexport.sh

EXTRA_DIST = \
	$(check_SCRIPTS)

check_PROGRAMS = \
	una_test_base16_stream \
	una_test_base32_stream \
	una_test_base64_stream \
	una_test_byte_stream \
	una_test_codepage_koi8_r \
	una_test_codepage_koi8_u \
	una_test_codepage_mac_arabic \
	una_test_codepage_mac_celtic \
	una_test_codepage_mac_centraleurroman \
	una_test_codepage_mac_croatian \
	una_test_codepage_mac_cyrillic \
	una_test_codepage_mac_dingbats \
	una_test_codepage_mac_farsi \
	una_test_codepage_mac_gaelic \
	una_test_codepage_mac_greek \
	una_test_codepage_mac_icelandic \
	una_test_codepage_mac_roman \
	una_test_codepage_mac_romanian \
	una_test_codepage_mac_russian \
	una_test_codepage_mac_ukrainian \
	una_test_codepage_windows_874 \
	una_test_codepage_windows_932 \
	una_test_codepage_windows_936 \
	una_test_codepage_windows_949 \
	una_test_codepage_windows_950 \
	una_test_codepage_windows_1250 \
	una_test_codepage_windows_1251 \
	una_test_codepage_windows_1252 \
	una_test_codepage_windows_1253 \
	una_test_codepage_windows_1254 \
	una_test_codepage_windows_1255 \
	una_test_codepage_windows_1256 \
	una_test_codepage_windows_1257 \
	una_test_codepage_windows_1258 \
	una_test_error \
	una_test_support \
	una_test_unicode_character \
	una_test_url_stream \
	una_test_utf16_stream \
	una_test_utf16_string \
	una_test_utf32_stream \
	una_test_utf32_string \
	una_test_utf7_stream \
	una_test_utf8_stream \
	una_test_utf8_string

una_test_base16_stream_SOURCES = \
	una_test_base16_stream.c \
	una_test_libcerror.h \
	una_test_libuna.h \
	una_test_macros.h \
	una_test_unused.h

una_test_base16_stream_LDADD = \
	../libuna/libuna.la \
	@LIBCERROR_LIBADD@

una_test_base32_stream_SOURCES = \
	una_test_base32_stream.c \
	una_test_libcerror.h \
	una_test_libuna.h \
	una_test_macros.h \
	una_test_unused.h

una_test_base32_stream_LDADD = \
	../libuna/libuna.la \
	@LIBCERROR_LIBADD@

una_test_base64_stream_SOURCES = \
	una_test_base64_stream.c \
	una_test_libcerror.h \
	una_test_libuna.h \
	una_test_macros.h \
	una_test_unused.h

una_test_base64_stream_LDADD = \
	../libuna/libuna.la \
	@LIBCERROR_LIBADD@

una_test_byte_stream_SOURCES = \
	una_test_byte_stream.c \
	una_test_libcerror.h \
	una_test_libuna.h \
	una_test_macros.h \
	una_test_unused.h

una_test_byte_stream_LDADD = \
	../libuna/libuna.la \
	@LIBCERROR_LIBADD@

una_test_codepage_koi8_r_SOURCES = \
	una_test_codepage_koi8_r.c una_test_codepage_koi8_r.h \
	una_test_libcerror.h \
	una_test_libuna.h \
	una_test_macros.h \
	una_test_types.h \
	una_test_unused.h

una_test_codepage_koi8_r_LDADD = \
	../libuna/libuna.la \
	@LIBCERROR_LIBADD@

una_test_codepage_koi8_u_SOURCES = \
	una_test_codepage_koi8_u.c una_test_codepage_koi8_u.h \
	una_test_libcerror.h \
	una_test_libuna.h \
	una_test_macros.h \
	una_test_types.h \
	una_test_unused.h

una_test_codepage_koi8_u_LDADD = \
	../libuna/libuna.la \
	@LIBCERROR_LIBADD@

una_test_codepage_mac_arabic_SOURCES = \
	una_test_codepage_mac_arabic.c una_test_codepage_mac_arabic.h \
	una_test_libcerror.h \
	una_test_libuna.h \
	una_test_macros.h \
	una_test_types.h \
	una_test_unused.h

una_test_codepage_mac_arabic_LDADD = \
	../libuna/libuna.la \
	@LIBCERROR_LIBADD@

una_test_codepage_mac_celtic_SOURCES = \
	una_test_codepage_mac_celtic.c una_test_codepage_mac_celtic.h \
	una_test_libcerror.h \
	una_test_libuna.h \
	una_test_macros.h \
	una_test_types.h \
	una_test_unused.h

una_test_codepage_mac_celtic_LDADD = \
	../libuna/libuna.la \
	@LIBCERROR_LIBADD@

una_test_codepage_mac_centraleurroman_SOURCES = \
	una_test_codepage_mac_centraleurroman.c una_test_codepage_mac_centraleurroman.h \
	una_test_libcerror.h \
	una_test_libuna.h \
	una_test_macros.h \
	una_test_types.h \
	una_test_unused.h

una_test_codepage_mac_centraleurroman_LDADD = \
	../libuna/libuna.la \
	@LIBCERROR_LIBADD@

una_test_codepage_mac_croatian_SOURCES = \
	una_test_codepage_mac_croatian.c una_test_codepage_mac_croatian.h \
	una_test_libcerror.h \
	una_test_libuna.h \
	una_test_macros.h \
	una_test_types.h \
	una_test_unused.h

una_test_codepage_mac_croatian_LDADD = \
	../libuna/libuna.la \
	@LIBCERROR_LIBADD@

una_test_codepage_mac_cyrillic_SOURCES = \
	una_test_codepage_mac_cyrillic.c una_test_codepage_mac_cyrillic.h \
	una_test_libcerror.h \
	una_test_libuna.h \
	una_test_macros.h \
	una_test_types.h \
	una_test_unused.h

una_test_codepage_mac_cyrillic_LDADD = \
	../libuna/libuna.la \
	@LIBCERROR_LIBADD@

una_test_codepage_mac_dingbats_SOURCES = \
	una_test_codepage_mac_dingbats.c una_test_codepage_mac_dingbats.h \
	una_test_libcerror.h \
	una_test_libuna.h \
	una_test_macros.h \
	una_test_types.h \
	una_test_unused.h

una_test_codepage_mac_dingbats_LDADD = \
	../libuna/libuna.la \
	@LIBCERROR_LIBADD@

una_test_codepage_mac_farsi_SOURCES = \
	una_test_codepage_mac_farsi.c una_test_codepage_mac_farsi.h \
	una_test_libcerror.h \
	una_test_libuna.h \
	una_test_macros.h \
	una_test_types.h \
	una_test_unused.h

una_test_codepage_mac_farsi_LDADD = \
	../libuna/libuna.la \
	@LIBCERROR_LIBADD@

una_test_codepage_mac_gaelic_SOURCES = \
	una_test_codepage_mac_gaelic.c una_test_codepage_mac_gaelic.h \
	una_test_libcerror.h \
	una_test_libuna.h \
	una_test_macros.h \
	una_test_types.h \
	una_test_unused.h

una_test_codepage_mac_gaelic_LDADD = \
	../libuna/libuna.la \
	@LIBCERROR_LIBADD@

una_test_codepage_mac_greek_SOURCES = \
	una_test_codepage_mac_greek.c una_test_codepage_mac_greek.h \
	una_test_libcerror.h \
	una_test_libuna.h \
	una_test_macros.h \
	una_test_types.h \
	una_test_unused.h

una_test_codepage_mac_greek_LDADD = \
	../libuna/libuna.la \
	@LIBCERROR_LIBADD@

una_test_codepage_mac_icelandic_SOURCES = \
	una_test_codepage_mac_icelandic.c una_test_codepage_mac_icelandic.h \
	una_test_libcerror.h \
	una_test_libuna.h \
	una_test_macros.h \
	una_test_types.h \
	una_test_unused.h

una_test_codepage_mac_icelandic_LDADD = \
	../libuna/libuna.la \
	@LIBCERROR_LIBADD@

una_test_codepage_mac_roman_SOURCES = \
	una_test_codepage_mac_roman.c una_test_codepage_mac_roman.h \
	una_test_libcerror.h \
	una_test_libuna.h \
	una_test_macros.h \
	una_test_types.h \
	una_test_unused.h

una_test_codepage_mac_roman_LDADD = \
	../libuna/libuna.la \
	@LIBCERROR_LIBADD@

una_test_codepage_mac_romanian_SOURCES = \
	una_test_codepage_mac_romanian.c una_test_codepage_mac_romanian.h \
	una_test_libcerror.h \
	una_test_libuna.h \
	una_test_macros.h \
	una_test_types.h \
	una_test_unused.h

una_test_codepage_mac_romanian_LDADD = \
	../libuna/libuna.la \
	@LIBCERROR_LIBADD@

una_test_codepage_mac_russian_SOURCES = \
	una_test_codepage_mac_russian.c una_test_codepage_mac_russian.h \
	una_test_libcerror.h \
	una_test_libuna.h \
	una_test_macros.h \
	una_test_types.h \
	una_test_unused.h

una_test_codepage_mac_russian_LDADD = \
	../libuna/libuna.la \
	@LIBCERROR_LIBADD@

una_test_codepage_mac_ukrainian_SOURCES = \
	una_test_codepage_mac_ukrainian.c una_test_codepage_mac_ukrainian.h \
	una_test_libcerror.h \
	una_test_libuna.h \
	una_test_macros.h \
	una_test_types.h \
	una_test_unused.h

una_test_codepage_mac_ukrainian_LDADD = \
	../libuna/libuna.la \
	@LIBCERROR_LIBADD@

una_test_codepage_windows_874_SOURCES = \
	una_test_codepage_windows_874.c una_test_codepage_windows_874.h \
	una_test_libcerror.h \
	una_test_libuna.h \
	una_test_macros.h \
	una_test_types.h \
	una_test_unused.h

una_test_codepage_windows_874_LDADD = \
	../libuna/libuna.la \
	@LIBCERROR_LIBADD@

una_test_codepage_windows_932_SOURCES = \
	una_test_codepage_windows_932.c una_test_codepage_windows_932.h \
	una_test_libcerror.h \
	una_test_libuna.h \
	una_test_macros.h \
	una_test_types.h \
	una_test_unused.h

una_test_codepage_windows_932_LDADD = \
	../libuna/libuna.la \
	@LIBCERROR_LIBADD@

una_test_codepage_windows_936_SOURCES = \
	una_test_codepage_windows_936.c una_test_codepage_windows_936.h \
	una_test_libcerror.h \
	una_test_libuna.h \
	una_test_macros.h \
	una_test_types.h \
	una_test_unused.h

una_test_codepage_windows_936_LDADD = \
	../libuna/libuna.la \
	@LIBCERROR_LIBADD@

una_test_codepage_windows_949_SOURCES = \
	una_test_codepage_windows_949.c una_test_codepage_windows_949.h \
	una_test_libcerror.h \
	una_test_libuna.h \
	una_test_macros.h \
	una_test_types.h \
	una_test_unused.h

una_test_codepage_windows_949_LDADD = \
	../libuna/libuna.la \
	@LIBCERROR_LIBADD@

una_test_codepage_windows_950_SOURCES = \
	una_test_codepage_windows_950.c una_test_codepage_windows_950.h \
	una_test_libcerror.h \
	una_test_libuna.h \
	una_test_macros.h \
	una_test_types.h \
	una_test_unused.h

una_test_codepage_windows_950_LDADD = \
	../libuna/libuna.la \
	@LIBCERROR_LIBADD@

una_test_codepage_windows_1250_SOURCES = \
	una_test_codepage_windows_1250.c una_test_codepage_windows_1250.h \
	una_test_libcerror.h \
	una_test_libuna.h \
	una_test_macros.h \
	una_test_types.h \
	una_test_unused.h

una_test_codepage_windows_1250_LDADD = \
	../libuna/libuna.la \
	@LIBCERROR_LIBADD@

una_test_codepage_windows_1251_SOURCES = \
	una_test_codepage_windows_1251.c una_test_codepage_windows_1251.h \
	una_test_libcerror.h \
	una_test_libuna.h \
	una_test_macros.h \
	una_test_types.h \
	una_test_unused.h

una_test_codepage_windows_1251_LDADD = \
	../libuna/libuna.la \
	@LIBCERROR_LIBADD@

una_test_codepage_windows_1252_SOURCES = \
	una_test_codepage_windows_1252.c una_test_codepage_windows_1252.h \
	una_test_libcerror.h \
	una_test_libuna.h \
	una_test_macros.h \
	una_test_types.h \
	una_test_unused.h

una_test_codepage_windows_1252_LDADD = \
	../libuna/libuna.la \
	@LIBCERROR_LIBADD@

una_test_codepage_windows_1253_SOURCES = \
	una_test_codepage_windows_1253.c una_test_codepage_windows_1253.h \
	una_test_libcerror.h \
	una_test_libuna.h \
	una_test_macros.h \
	una_test_types.h \
	una_test_unused.h

una_test_codepage_windows_1253_LDADD = \
	../libuna/libuna.la \
	@LIBCERROR_LIBADD@

una_test_codepage_windows_1254_SOURCES = \
	una_test_codepage_windows_1254.c una_test_codepage_windows_1254.h \
	una_test_libcerror.h \
	una_test_libuna.h \
	una_test_macros.h \
	una_test_types.h \
	una_test_unused.h

una_test_codepage_windows_1254_LDADD = \
	../libuna/libuna.la \
	@LIBCERROR_LIBADD@

una_test_codepage_windows_1255_SOURCES = \
	una_test_codepage_windows_1255.c una_test_codepage_windows_1255.h \
	una_test_libcerror.h \
	una_test_libuna.h \
	una_test_macros.h \
	una_test_types.h \
	una_test_unused.h

una_test_codepage_windows_1255_LDADD = \
	../libuna/libuna.la \
	@LIBCERROR_LIBADD@

una_test_codepage_windows_1256_SOURCES = \
	una_test_codepage_windows_1256.c una_test_codepage_windows_1256.h \
	una_test_libcerror.h \
	una_test_libuna.h \
	una_test_macros.h \
	una_test_types.h \
	una_test_unused.h

una_test_codepage_windows_1256_LDADD = \
	../libuna/libuna.la \
	@LIBCERROR_LIBADD@

una_test_codepage_windows_1257_SOURCES = \
	una_test_codepage_windows_1257.c una_test_codepage_windows_1257.h \
	una_test_libcerror.h \
	una_test_libuna.h \
	una_test_macros.h \
	una_test_types.h \
	una_test_unused.h

una_test_codepage_windows_1257_LDADD = \
	../libuna/libuna.la \
	@LIBCERROR_LIBADD@

una_test_codepage_windows_1258_SOURCES = \
	una_test_codepage_windows_1258.c una_test_codepage_windows_1258.h \
	una_test_libcerror.h \
	una_test_libuna.h \
	una_test_macros.h \
	una_test_types.h \
	una_test_unused.h

una_test_codepage_windows_1258_LDADD = \
	../libuna/libuna.la \
	@LIBCERROR_LIBADD@

una_test_error_SOURCES = \
	una_test_error.c \
	una_test_libuna.h \
	una_test_macros.h \
	una_test_unused.h

una_test_error_LDADD = \
	../libuna/libuna.la

una_test_support_SOURCES = \
	una_test_libuna.h \
	una_test_macros.h \
	una_test_support.c \
	una_test_unused.h

una_test_support_LDADD = \
	../libuna/libuna.la

una_test_unicode_character_SOURCES = \
	una_test_codepage_ascii.h \
	una_test_codepage_iso_8859_1.h \
	una_test_codepage_iso_8859_2.h \
	una_test_codepage_iso_8859_3.h \
	una_test_codepage_iso_8859_4.h \
	una_test_codepage_iso_8859_5.h \
	una_test_codepage_iso_8859_6.h \
	una_test_codepage_iso_8859_7.h \
	una_test_codepage_iso_8859_8.h \
	una_test_codepage_iso_8859_9.h \
	una_test_codepage_iso_8859_10.h \
	una_test_codepage_iso_8859_11.h \
	una_test_codepage_iso_8859_13.h \
	una_test_codepage_iso_8859_14.h \
	una_test_codepage_iso_8859_15.h \
	una_test_codepage_iso_8859_16.h \
	una_test_codepage_koi8_r.h \
	una_test_codepage_koi8_u.h \
	una_test_codepage_mac_arabic.h \
	una_test_codepage_mac_celtic.h \
	una_test_codepage_mac_centraleurroman.h \
	una_test_codepage_mac_croatian.h \
	una_test_codepage_mac_cyrillic.h \
	una_test_codepage_mac_dingbats.h \
	una_test_codepage_mac_gaelic.h \
	una_test_codepage_mac_greek.h \
	una_test_codepage_mac_icelandic.h \
	una_test_codepage_mac_roman.h \
	una_test_codepage_mac_romanian.h \
	una_test_codepage_mac_russian.h \
	una_test_codepage_mac_ukrainian.h \
	una_test_codepage_windows_874.h \
	una_test_codepage_windows_932.h \
	una_test_codepage_windows_936.h \
	una_test_codepage_windows_949.h \
	una_test_codepage_windows_950.h \
	una_test_codepage_windows_1250.h \
	una_test_codepage_windows_1251.h \
	una_test_codepage_windows_1252.h \
	una_test_codepage_windows_1253.h \
	una_test_codepage_windows_1254.h \
	una_test_codepage_windows_1255.h \
	una_test_codepage_windows_1256.h \
	una_test_codepage_windows_1257.h \
	una_test_codepage_windows_1258.h \
	una_test_libcerror.h \
	una_test_libuna.h \
	una_test_macros.h \
	una_test_types.h \
	una_test_unused.h \
	una_test_unicode_character.c

una_test_unicode_character_LDADD = \
	../libuna/libuna.la \
	@LIBCERROR_LIBADD@

una_test_url_stream_SOURCES = \
	una_test_libcerror.h \
	una_test_libuna.h \
	una_test_macros.h \
	una_test_unused.h \
	una_test_url_stream.c

una_test_url_stream_LDADD = \
	../libuna/libuna.la \
	@LIBCERROR_LIBADD@

una_test_utf16_stream_SOURCES = \
	una_test_libcerror.h \
	una_test_libuna.h \
	una_test_macros.h \
	una_test_unused.h \
	una_test_utf16_stream.c

una_test_utf16_stream_LDADD = \
	../libuna/libuna.la \
	@LIBCERROR_LIBADD@

una_test_utf16_string_SOURCES = \
	una_test_libcerror.h \
	una_test_libuna.h \
	una_test_macros.h \
	una_test_unused.h \
	una_test_utf16_string.c

una_test_utf16_string_LDADD = \
	../libuna/libuna.la \
	@LIBCERROR_LIBADD@

una_test_utf32_stream_SOURCES = \
	una_test_libcerror.h \
	una_test_libuna.h \
	una_test_macros.h \
	una_test_unused.h \
	una_test_utf32_stream.c

una_test_utf32_stream_LDADD = \
	../libuna/libuna.la \
	@LIBCERROR_LIBADD@

una_test_utf32_string_SOURCES = \
	una_test_libcerror.h \
	una_test_libuna.h \
	una_test_macros.h \
	una_test_unused.h \
	una_test_utf32_string.c

una_test_utf32_string_LDADD = \
	../libuna/libuna.la \
	@LIBCERROR_LIBADD@

una_test_utf7_stream_SOURCES = \
	una_test_libcerror.h \
	una_test_libuna.h \
	una_test_macros.h \
	una_test_unused.h \
	una_test_utf7_stream.c

una_test_utf7_stream_LDADD = \
	../libuna/libuna.la \
	@LIBCERROR_LIBADD@

una_test_utf8_stream_SOURCES = \
	una_test_libcerror.h \
	una_test_libuna.h \
	una_test_macros.h \
	una_test_unused.h \
	una_test_utf8_stream.c

una_test_utf8_stream_LDADD = \
	../libuna/libuna.la \
	@LIBCERROR_LIBADD@

una_test_utf8_string_SOURCES = \
	una_test_libcerror.h \
	una_test_libuna.h \
	una_test_macros.h \
	una_test_unused.h \
	una_test_utf8_string.c

una_test_utf8_string_LDADD = \
	../libuna/libuna.la \
	@LIBCERROR_LIBADD@

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

